adjusted header phtoto & added title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ header {
   margin: auto;
   padding: 55px 90px 250px;
   width: 100%;
-  background-image: url(../images/photo.JPG);
+  background-image: url(../images/photo-big-screen.jpg);
   background-size: cover;
   text-align: center;
   border-bottom: 2px solid var(--secondary-color);
